--- a/spring-ws-core/pom.xml
+++ b/spring-ws-core/pom.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.ws</groupId>
-        <artifactId>spring-ws</artifactId>
-        <version>4.0.5-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>org.springframework.ws</groupId>
+    <artifactId>spring-ws</artifactId>
+    <version>4.0.5-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>spring-ws-core</artifactId>
-    <packaging>jar</packaging>
+  <artifactId>spring-ws-core</artifactId>
+  <packaging>jar</packaging>
 
-    <description>Spring WS Core</description>
+  <description>Spring WS Core</description>
+  <properties>
+    <httpclient.version>4.5.13</httpclient.version>
+  </properties>
 
     <dependencies>
 
